local.conf: add solidrun hummingboard2 specific stuff
Change-Id: Iaa8dcecaefb61a4aa30adb60567a9813251bff7b
Signed-off-by: Christophe Priouzeau <christophe.priouzeau@st.com>

--- a/conf/local.conf
+++ b/conf/local.conf
@@ -73,3 +73,6 @@ MACHINE_EXTRA_RRECOMMENDS_remove = "imx-alsa-plugins"
 ## Force a more recent kernel on rpi
 PREFERRED_PROVIDER_virtual/kernel = "linux-raspberrypi-dev"
 PREFERRED_VERSION_linux-raspberrypi = "4.11%"
+
+KERNEL_DEVICETREE_append_cubox-i = " imx6q-hummingboard2.dtb "
+IMAGE_INSTALL_append_cubox-i = " hummingboard-btattach "
