Adapt bblayer for supporting meta-osf
osf: bump to version 0.22

Change-Id: Ibd45f28f41b351481f2c284acfa2d4b3adc4a7e1
Signed-off-by: Christophe Priouzeau <christophe.priouzeau@st.com>

--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -20,13 +20,19 @@ BASELAYERS ?= " \
   ${OEROOT}/layers/meta-openembedded/meta-perl \
   ${OEROOT}/layers/meta-openembedded/meta-python \
   ${OEROOT}/layers/meta-virtualization \
+  ${OEROOT}/layers/meta-updater \
 "
 
 # These layers hold machine specific content, aka Board Support Packages
 BSPLAYERS ?= " \
+  ${OEROOT}/layers/meta-qcom \
+  ${OEROOT}/layers/meta-96boards \
   ${OEROOT}/layers/meta-freescale \
   ${OEROOT}/layers/meta-freescale-3rdparty \
-  ${OEROOT}/layers/meta-lite/meta-lite-bsp \
+  ${OEROOT}/layers/meta-ti \
+  ${OEROOT}/layers/meta-st-cannes2 \
+  ${OEROOT}/layers/meta-ledge/meta-ledge-bsp \
+  ${OEROOT}/layers/meta-yocto/meta-yocto-bsp \
 "
 
 # Add your overlay location to EXTRALAYERS
@@ -35,10 +41,12 @@ EXTRALAYERS ?= " \
   ${OEROOT}/layers/meta-linaro/meta-linaro \
   ${OEROOT}/layers/meta-linaro/meta-linaro-toolchain \
   ${OEROOT}/layers/meta-linaro/meta-aarch64 \
+  ${OEROOT}/layers/meta-linaro/meta-optee \
 "
 
 BBLAYERS = " \
-  ${OEROOT}/layers/meta-lite/meta-lite-gw \
+  ${OEROOT}/layers/meta-osf \
+  ${OEROOT}/layers/meta-ledge/meta-ledge-gw \
   ${BASELAYERS} \
   ${BSPLAYERS} \
   ${EXTRALAYERS} \
