manifest: update changes in meta-ledge
Folow changes introduced on meta-ledge

Signed-off-by: Ilias Apalodimas <ilias.apalodimas@linaro.org>

--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -10,28 +10,21 @@ BBFILES = ""
 # These layers hold recipe metadata not found in OE-core, but lack any machine or distro content
 BASELAYERS ?= " \
   ${OEROOT}/layers/meta-openembedded/meta-oe \
-  ${OEROOT}/layers/meta-openembedded/meta-gnome \
-  ${OEROOT}/layers/meta-openembedded/meta-xfce \
   ${OEROOT}/layers/meta-openembedded/meta-initramfs \
   ${OEROOT}/layers/meta-openembedded/meta-multimedia \
   ${OEROOT}/layers/meta-openembedded/meta-networking \
   ${OEROOT}/layers/meta-openembedded/meta-webserver \
   ${OEROOT}/layers/meta-openembedded/meta-filesystems \
-  ${OEROOT}/layers/meta-openembedded/meta-perl \
   ${OEROOT}/layers/meta-openembedded/meta-python \
   ${OEROOT}/layers/meta-virtualization \
-  ${OEROOT}/layers/meta-updater \
   ${OEROOT}/layers/meta-ledge/meta-ledge-sw \
 "
 
 # These layers hold machine specific content, aka Board Support Packages
 BSPLAYERS ?= " \
-  ${OEROOT}/layers/meta-qcom \
-  ${OEROOT}/layers/meta-96boards \
   ${OEROOT}/layers/meta-freescale \
   ${OEROOT}/layers/meta-freescale-3rdparty \
   ${OEROOT}/layers/meta-ti \
-  ${OEROOT}/layers/meta-st-cannes2 \
   ${OEROOT}/layers/meta-ledge/meta-ledge-bsp \
   ${OEROOT}/layers/meta-yocto/meta-yocto-bsp \
 "
@@ -46,8 +39,7 @@ EXTRALAYERS ?= " \
 "
 
 BBLAYERS = " \
-  ${OEROOT}/layers/meta-osf \
-  ${OEROOT}/layers/meta-ledge/meta-ledge-distro \
+  ${OEROOT}/layers/meta-rpb \
   ${BASELAYERS} \
   ${BSPLAYERS} \
   ${EXTRALAYERS} \
