--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -18,6 +18,7 @@ BASELAYERS ?= " \
   ${OEROOT}/layers/meta-openembedded/meta-python \
   ${OEROOT}/layers/meta-virtualization \
   ${OEROOT}/layers/meta-ledge/meta-ledge-sw \
+  ${OEROOT}/layers/meta-updater/ \
 "
 
 # These layers hold machine specific content, aka Board Support Packages
