layers: add support for meta-marvell
Include marvell espressobin support added on meta-ledge

Signed-off-by: Ilias Apalodimas <ilias.apalodimas@linaro.org>

--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -7,6 +7,9 @@ BBPATH = "${TOPDIR}"
 
 BBFILES = ""
 
+# mask recipes we don't want here
+BBMASK += "${OEROOT}/layers/meta-marvel/recipes-connectivity/openssl/"
+
 # These layers hold recipe metadata not found in OE-core, but lack any machine or distro content
 BASELAYERS ?= " \
   ${OEROOT}/layers/meta-openembedded/meta-oe \
@@ -26,6 +29,7 @@ BSPLAYERS ?= " \
   ${OEROOT}/layers/meta-freescale \
   ${OEROOT}/layers/meta-freescale-3rdparty \
   ${OEROOT}/layers/meta-ti \
+  ${OEROOT}/layers/meta-marvel \
   ${OEROOT}/layers/meta-ledge/meta-ledge-bsp \
   ${OEROOT}/layers/meta-yocto/meta-yocto-bsp \
 "
