conf: move BBMASK from bblayers to local config
Signed-off-by: Ilias Apalodimas <ilias.apalodimas@linaro.org>

--- a/conf/local.conf
+++ b/conf/local.conf
@@ -49,3 +49,6 @@ PARALLEL_MAKE ?= "-j ${@oe.utils.cpu_count()}"
 #PRSERV_HOST = "localhost:0"
 
 INHERIT += "sota"
+
+# mask recipes we don't want here
+BBMASK += "${OEROOT}/layers/meta-marvel/recipes-connectivity/openssl/"
