--- a/conf/local.conf
+++ b/conf/local.conf
@@ -48,4 +48,4 @@ PARALLEL_MAKE ?= "-j ${@oe.utils.cpu_count()}"
 # generating the feeds
 #PRSERV_HOST = "localhost:0"
 
-INHERIT += "sota"
+#INHERIT += "sota"
