--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -18,7 +18,7 @@ BASELAYERS ?= " \
   ${OEROOT}/layers/meta-openembedded/meta-python \
   ${OEROOT}/layers/meta-virtualization \
   ${OEROOT}/layers/meta-ledge/meta-ledge-sw \
-  ${OEROOT}/layers/meta-updater/ \
+  ${OEROOT}/layers/meta-clang \
 "
 
 # These layers hold machine specific content, aka Board Support Packages
@@ -27,7 +27,6 @@ BSPLAYERS ?= " \
   ${OEROOT}/layers/meta-freescale-3rdparty \
   ${OEROOT}/layers/meta-ti \
   ${OEROOT}/layers/meta-ledge/meta-ledge-bsp \
-  ${OEROOT}/layers/meta-yocto/meta-yocto-bsp \
 "
 
 # Add your overlay location to EXTRALAYERS
@@ -37,6 +36,7 @@ EXTRALAYERS ?= " \
   ${OEROOT}/layers/meta-linaro/meta-linaro-toolchain \
   ${OEROOT}/layers/meta-linaro/meta-aarch64 \
   ${OEROOT}/layers/meta-linaro/meta-optee \
+  ${OEROOT}/layers/meta-updater/ \
 "
 
 BBLAYERS = " \
