--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -37,6 +37,7 @@ EXTRALAYERS ?= " \
   ${OEROOT}/layers/meta-linaro/meta-aarch64 \
   ${OEROOT}/layers/meta-linaro/meta-optee \
   ${OEROOT}/layers/meta-updater/ \
+  ${OEROOT}/layers/meta-selinux/ \
 "
 
 BBLAYERS = " \
