Add support of meta-security
- add meta-security for tpm2 tools
- meta-ledge: add qemu machine
- meta-ledge: update kernel to 5.1rc5
- meta-ledge: add tpm2 tools on ledge-gateway image

Change-Id: I4688b0a6841a00cd5e605089a2c041e7707c013e
Signed-off-by: Christophe Priouzeau <christophe.priouzeau@st.com>

--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -38,6 +38,10 @@ EXTRALAYERS ?= " \
   ${OEROOT}/layers/meta-linaro/meta-optee \
   ${OEROOT}/layers/meta-updater/ \
   ${OEROOT}/layers/meta-selinux/ \
+  ${OEROOT}/layers/meta-security/ \
+  ${OEROOT}/layers/meta-security/meta-tpm \
+  ${OEROOT}/layers/meta-openembedded/meta-perl \
+  ${OEROOT}/layers/meta-openembedded/meta-filesystems \
 "
 
 BBLAYERS = " \
