layers: add meta-openstack
Since we'll be using cloud-init on our ledge-iot platform add the
meta-layer that includes that

Signed-off-by: Ilias Apalodimas <ilias.apalodimas@linaro.org>

--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -39,6 +39,8 @@ EXTRALAYERS ?= " \
   ${OEROOT}/layers/meta-updater/ \
   ${OEROOT}/layers/meta-selinux/ \
   ${OEROOT}/layers/meta-security/ \
+  ${OEROOT}/layers/meta-cloud-services/ \
+  ${OEROOT}/layers/meta-cloud-services/meta-openstack \
   ${OEROOT}/layers/meta-security/meta-tpm \
   ${OEROOT}/layers/meta-openembedded/meta-perl \
   ${OEROOT}/layers/meta-openembedded/meta-filesystems \
