add meta-secure-core for mokutil app
Signed-off-by: Maxim Uvarov <maxim.uvarov@linaro.org>

--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -39,6 +39,7 @@ EXTRALAYERS ?= " \
   ${OEROOT}/layers/meta-updater/ \
   ${OEROOT}/layers/meta-selinux/ \
   ${OEROOT}/layers/meta-security/ \
+  ${OEROOT}/layers/meta-secure-core\
   ${OEROOT}/layers/meta-cloud-services/ \
   ${OEROOT}/layers/meta-cloud-services/meta-openstack \
   ${OEROOT}/layers/meta-security/meta-tpm \
