--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -34,7 +34,6 @@ BSPLAYERS ?= " \
 EXTRALAYERS ?= " \
   ${OEROOT}/layers/meta-linaro/meta-linaro \
   ${OEROOT}/layers/meta-linaro/meta-linaro-toolchain \
-  ${OEROOT}/layers/meta-linaro/meta-aarch64 \
   ${OEROOT}/layers/meta-linaro/meta-optee \
   ${OEROOT}/layers/meta-updater/ \
   ${OEROOT}/layers/meta-selinux/ \
@@ -46,7 +45,7 @@ EXTRALAYERS ?= " \
   ${OEROOT}/layers/meta-cloud-services/meta-openstack \
   ${OEROOT}/layers/meta-security/meta-tpm \
   ${OEROOT}/layers/meta-openembedded/meta-perl \
-  ${OEROOT}/layers/meta-openembedded/meta-filesystems \
+  ${OEROOT}/layers/meta-96boards \
 "
 
 BBLAYERS = " \
