--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -19,6 +19,7 @@ BASELAYERS ?= " \
   ${OEROOT}/layers/meta-virtualization \
   ${OEROOT}/layers/meta-ledge/meta-ledge-sw \
   ${OEROOT}/layers/meta-clang \
+  ${OEROOT}/layers/meta-rust \
 "
 
 # These layers hold machine specific content, aka Board Support Packages
