fix initrd copy in 0003-wic-bootimg-efi-implement-include-path.patch
Signed-off-by: Maxim Uvarov <maxim.uvarov@linaro.org>
Change-Id: I28f3f2ee8058d9d02e15ee7bb9278d010e4caf5c

--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -44,6 +44,7 @@ EXTRALAYERS ?= " \
   ${OEROOT}/layers/meta-cloud-services/ \
   ${OEROOT}/layers/meta-cloud-services/meta-openstack \
   ${OEROOT}/layers/meta-security/meta-tpm \
+  ${OEROOT}/layers/meta-security/meta-parsec \
   ${OEROOT}/layers/meta-openembedded/meta-perl \
   ${OEROOT}/layers/meta-96boards \
   ${OEROOT}/layers/meta-arm/meta-arm \
