bblayers.conf: add meta-encrypted-storage
Signed-off-by: Maxim Uvarov <maxim.uvarov@linaro.org>
Change-Id: Ie67ba92ea59bc8e8df04b864634028fba3260feb

--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -41,6 +41,8 @@ EXTRALAYERS ?= " \
   ${OEROOT}/layers/meta-secure-core/meta/ \
   ${OEROOT}/layers/meta-secure-core/meta-efi-secure-boot/ \
   ${OEROOT}/layers/meta-secure-core/meta-signing-key/ \
+  ${OEROOT}/layers/meta-secure-core/meta-encrypted-storage/ \
+  ${OEROOT}/layers/meta-secure-core/meta-tpm2/ \
   ${OEROOT}/layers/meta-cloud-services/ \
   ${OEROOT}/layers/meta-cloud-services/meta-openstack \
   ${OEROOT}/layers/meta-security/meta-tpm \
